<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.itquasar.multiverse.jmacro</groupId>
    <artifactId>jmacro</artifactId>
    <packaging>pom</packaging>
    <version>0.1.0-SNAPSHOT</version>

    <name>JMacro</name>
    <description>JMacro parent pom</description>

    <properties>
        <os.family>unknown</os.family>
        <java.version>17</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven.compiler.release>${java.version}</maven.compiler.release>
        <maven.compiler.version>3.8.1</maven.compiler.version>

        <jvm.argLine>
            --add-opens java.base/sun.nio.ch=ALL-UNNAMED
            --add-opens java.base/java.io=ALL-UNNAMED
            -Dspock.iKnowWhatImDoing.disableGroovyVersionCheck=true
        </jvm.argLine>

        <source.encoding>UTF-8</source.encoding>
        <project.build.sourceEncoding>${source.encoding}</project.build.sourceEncoding>
        <project.reporting.outputEncoding>${source.encoding}</project.reporting.outputEncoding>

        <checks.fail>false</checks.fail>
        <checkstyle.fail>${checks.fail}</checkstyle.fail>

        <lombok.version>1.18.20</lombok.version>
        <checker.version>3.18.0</checker.version>

        <groovy.version>4.0.0-beta-1</groovy.version>
        <gmavenplus.version>1.13.0</gmavenplus.version>

        <spock.version>2.0-groovy-3.0</spock.version>
        <spock-reports.version>2.1-groovy-3.0</spock-reports.version>
        <spotbugs.version>4.4.1</spotbugs.version>

        <javalin.version>4.0.0</javalin.version>
        <httpclient5.version>5.1</httpclient5.version>
    </properties>

    <modules>
        <module>jmacro-bom</module>
        <module>jmacro-docs</module>
        <module>jmacro-core</module>
        <module>jmacro-rest</module>
        <module>jmacro-commands</module>
        <module>jmacro-tests</module>
    </modules>

    <distributionManagement>
        <site>
            <id>localhost</id>
            <name>localhost</name>
            <url>file:///tmp/jmacro-site</url>
        </site>
    </distributionManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven.compiler.version}</version>
                    <inherited>true</inherited>
                    <configuration>
                        <useIncrementalCompilation>true</useIncrementalCompilation>
                        <showDeprecation>true</showDeprecation>
                        <showWarnings>true</showWarnings>
                        <skipMultiThreadWarning>true</skipMultiThreadWarning>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.codehaus.gmavenplus</groupId>
                    <artifactId>gmavenplus-plugin</artifactId>
                    <version>${gmavenplus.version}</version>
                    <inherited>true</inherited>
                    <executions>
                        <execution>
                            <goals>
                                <goal>addSources</goal>
                                <goal>addTestSources</goal>
                                <goal>generateStubs</goal>
                                <goal>compile</goal>
                                <goal>generateTestStubs</goal>
                                <goal>compileTests</goal>
                                <goal>removeStubs</goal>
                                <goal>removeTestStubs</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>

                <!-- Optional plugins for using Spock -->
                <!-- Only required if names of spec classes don't match default Surefire patterns (`*Test` etc.) -->
                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.0.0-M5</version>
                    <configuration>
                        <useModulePath>false</useModulePath>
                        <!-- https://issues.apache.org/jira/browse/SUREFIRE-1809 -->
                        <useFile>false</useFile>
                        <includes>
                            <include>**/*Test</include>
                            <include>**/*Spec</include>
                        </includes>
                        <forkCount>0.5C</forkCount>
                        <argLine>${jvm.argLine}</argLine>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>com.github.spotbugs</groupId>
                    <artifactId>spotbugs-maven-plugin</artifactId>
                    <version>${spotbugs.version}</version>
                    <dependencies>
                        <dependency>
                            <groupId>com.github.spotbugs</groupId>
                            <artifactId>spotbugs</artifactId>
                            <version>${spotbugs.version}</version>
                        </dependency>
                    </dependencies>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-pmd-plugin</artifactId>
                    <version>3.15.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-checkstyle-plugin</artifactId>
                    <version>3.1.2</version>
                    <dependencies>
                        <dependency>
                            <groupId>com.puppycrawl.tools</groupId>
                            <artifactId>checkstyle</artifactId>
                            <version>9.0.1</version>
                        </dependency>
                    </dependencies>
                    <executions>
                        <execution>
                            <id>checkstyle-validate</id>
                            <phase>validate</phase>
                            <goals>
                                <goal>check</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <configLocation>checkstyle.xml</configLocation>
                        <excludes>**/module-info.java</excludes>
                        <encoding>UTF-8</encoding>
                        <consoleOutput>true</consoleOutput>
                        <failsOnError>${checkstyle.fail}</failsOnError>
                        <failOnViolation>${checkstyle.fail}</failOnViolation>
                        <linkXRef>true</linkXRef>
                        <logViolationsToConsole>true</logViolationsToConsole>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <id>enforce-versions</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <version>3.8.3</version>
                                </requireMavenVersion>
                                <requireJavaVersion>
                                    <version>17</version>
                                </requireJavaVersion>
                                <!-- <requireOS><!- - Needed if using jrpm or jdeb - ->
                                    <family>unix</family>
                                </requireOS>-->
                                <reactorModuleConvergence>
                                    <message>The reactor is not valid</message>
                                    <!-- <ignoreModuleDependencies>true</ignoreModuleDependencies>-->
                                </reactorModuleConvergence>
                                <requireNoRepositories>
                                    <message>Best Practice is to never define repositories in pom.xml (use a repository
                                        manager instead)
                                    </message>
                                </requireNoRepositories>
                                <!--                                <requireReleaseDeps>-->
                                <!--                                    <message>No Snapshots Allowed! (requireReleaseDeps)</message>-->
                                <!--                                </requireReleaseDeps>-->
                                <!--                                <requireReleaseVersion>-->
                                <!--                                    <message>No Snapshots Allowed! (requireReleaseVersion)</message>-->
                                <!--                                </requireReleaseVersion>-->
                                <!--                                <requireSnapshotVersion>-->
                                <!--                                    <message>No Releases Allowed! (requireSnapshotVersion)</message>-->
                                <!--                                </requireSnapshotVersion>-->
                                <!--                                <dependencyConvergence>-->
                                <!--                                    <uniqueVersions>true</uniqueVersions>-->
                                <!--                                </dependencyConvergence>-->
                                <!--                                <requireUpperBoundDeps>-->
                                <!--                                    <uniqueVersions>true</uniqueVersions>-->
                                <!--                                </requireUpperBoundDeps>-->
                                <banDuplicatePomDependencyVersions/>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <!-- FIXME create profile -->
<!--            <plugin>-->
<!--                <groupId>org.apache.maven.plugins</groupId>-->
<!--                <artifactId>maven-checkstyle-plugin</artifactId>-->
<!--                <version>3.1.2</version>-->
<!--            </plugin>-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-toolchains-plugin</artifactId>
                <version>3.0.0</version>
                <configuration>
                    <toolchains>
                        <jdk>
                            <version>17</version>
                            <os>${os.family}</os>
                        </jdk>
                    </toolchains>
                </configuration>
                <executions>
                    <execution>
                        <phase>validate</phase>
                        <goals>
                            <goal>toolchain</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>3.0.0-M4</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>3.9.1</version>
                <configuration>
                    <locales>en</locales>
                </configuration>
                <executions>
                    <execution>
                        <id>site</id>
                        <phase>site</phase>
                        <goals>
                            <goal>stage</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>3.1.2</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>3.1.2</version>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>taglist-maven-plugin</artifactId>
                <version>2.4</version>
                <configuration>
                    <aggregate>true</aggregate>
                    <tagListOptions>
                        <tagClasses>
                            <tagClass>
                                <displayName>Need fix!</displayName>
                                <tags>
                                    <tag>
                                        <matchString>FIXME</matchString>
                                        <matchType>exact</matchType>
                                    </tag>
                                </tags>
                            </tagClass>
                            <tagClass>
                                <displayName>Todo Work</displayName>
                                <tags>
                                    <tag>
                                        <matchString>todo</matchString>
                                        <matchType>ignoreCase</matchType>
                                    </tag>
                                </tags>
                            </tagClass>
                        </tagClasses>
                    </tagListOptions>
                </configuration>
            </plugin>
        </plugins>
    </reporting>

    <profiles>
        <profile>
            <id>windows</id>
            <activation>
                <os>
                    <family>windows</family>
                </os>
            </activation>
            <properties>
                <os.family>windows</os.family>
            </properties>
        </profile>
        <profile>
            <id>linux</id>
            <activation>
                <os>
                    <family>linux</family>
                </os>
            </activation>
            <properties>
                <os.family>linux</os.family>
            </properties>
        </profile>
    </profiles>

</project>
